--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -10,11 +10,21 @@
 
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
+        <h4>Enter your details:</h4>
         <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+            <input class="form-control" autofocus type="text" name="first_name" placeholder="First Name">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="text" name="last_name" placeholder="Last Name">
         </div>
         <div class="form-group">
             <input class="form-control" type="email" name="email" placeholder="Email Address">
+        </div>
+        
+        <br>
+        <h4>Enter your account details</h4>
+        <div class="form-group">
+            <input class="form-control" type="text" name="username" placeholder="Username">
         </div>
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
