--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -7,7 +7,7 @@
     <div id="profile-container">
         <div class="profile-header"></div>
         <div class="profile-information">
-            <div id="follow">{{ followed_button_value }}</div>
+            <div id="follow" data-value="{{followed_button_value}}"><b>{{ followed_button_value }}</b></div>
             <div class="profile-name"><b>{{ profileUser.first_name }} {{ profileUser.last_name }}</b></div>
             <div class="profile-user">{{ profileUser }}</div>
             <div class="profile-network">{{ following.count }} Following &emsp; {{ followers.count }} Followers</div>    
