--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -46,6 +46,14 @@
                 {% block body %}
                 {% endblock %}
             </div>
+
+            <div id="popup"></div>
+            <dialog id="modal">
+                <h3>Delete Post?</h3>
+                <p>This can&#39;t be undone and it will be removed from your profile and the timeline of any accounts that follow you.</p>
+                <div class="deletePost">Delete</div>
+                <div class="cancelDelete">Cancel</div>
+            </dialog>
         </div>
     </body>
 </html>
