--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -17,8 +17,9 @@ textarea {
 }
 
 #follow {
-    position: absolute;
-    right: 0px;
+    position: relative;
+    /* margin: 5px; */
+    float: right;
     width: 104px;
     height: 36px;
     padding-left: 16px;
@@ -55,9 +56,15 @@ textarea {
     padding-bottom: 0.5rem; */
 }
 
-.posts-filter {
+.span-2-col {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    text-align: center;
+}
+
+.span-3-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
 }
 
@@ -80,11 +87,8 @@ textarea {
     margin: .5rem;
 }
 
-.span-3-col {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    text-align: center;
-}
+
+
 
 .no-profile-img {
     display: flex;
@@ -110,27 +114,57 @@ textarea {
     border-radius: 50%;
 }
 
+.post-options {
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    text-align: center;
+}
+
 .post-options:hover {
     color: rgb(29, 155, 240);
+    background: rgba(29, 155, 240, 0.1);
+
 }
 
 svg {
-    margin-bottom: 4px;
+    margin-bottom: 2px;
 }
 
-.comment:hover, .share:hover {
+.comment-svg:hover, .share-svg:hover {
     fill: rgb(29, 155, 240);
     color: rgb(29, 155, 240);
-}
-
-.like:hover {
-    fill: rgb(249, 24, 128);
-    color: rgb(249, 24, 128);
+    width: 24px;
+    height: 24px;
+    margin: auto;
+    border-radius: 100%;
+    background: rgba(29, 155, 240, 0.1);
 }
 
 .liked {
     fill: rgb(249, 24, 128);
     color: rgb(249, 24, 128);
+}
+
+.like-svg, .liked-svg {
+    width: 24px;
+    height: 24px;
+    margin: auto;
+    border-radius: 100%;
+}
+
+.like-svg, .liked-svg, .liked div, .like div {
+    display: inline-block;
+}
+
+.like:hover {
+    color: rgb(249, 24, 128);
+    fill: rgb(249, 24, 128);
+}
+
+.like:hover .like-svg, .liked:hover .liked-svg {
+    
+    background: rgba(249, 24, 128, 0.1);
 }
 
 #popup {
@@ -142,7 +176,6 @@ svg {
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, .2);
-    /* display: none; */
 }
 
 #popup.is-active {  
@@ -155,4 +188,35 @@ svg {
     font-weight: bold;
 }
 
+.profile-name {
+    font-weight: bold;
+}
 
+.profile-information {
+    padding: 10px 7px 10px 7px;
+}
+
+#modal {
+    max-width: 20rem;
+    padding: 30px;
+    border-radius: 1rem;
+    margin: auto;    
+}
+
+.deletePost, .cancelDelete {
+    width: 256px;
+    height: 44px;
+    border: 1px solid black;
+    border-radius: 22px;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+    line-height: 44px;
+}
+
+.deletePost {
+    background: red;
+    border: 1px solid red;
+    color: white;
+    margin-bottom: 8px;
+}
