--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -21,12 +21,12 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">All Posts</a>
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
                         </li>
                         {% if user.is_authenticated %}
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Following</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                             </li>
