--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,47 +1,49 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <div id="register">
+        <h2>Register</h2>
 
-    <h2>Register</h2>
+        {% if message %}
+            <div>{{ message }}</div>
+        {% endif %}
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+        <form action="{% url 'register' %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <h4>Enter your details:</h4>
+            <div class="form-group">
+                <input class="form-control" autofocus type="text" name="first_name" placeholder="First Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="last_name" placeholder="Last Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="Email Address">
+            </div>
+            
+            <br>
+            <h4>Enter your account details</h4>
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
 
-    <form action="{% url 'register' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <h4>Enter your details:</h4>
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="first_name" placeholder="First Name">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="last_name" placeholder="Last Name">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        
-        <br>
-        <h4>Enter your account details</h4>
-        <div class="form-group">
-            <input class="form-control" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
+            <br>
+            <h4>Upload a profile picture (optional)</h4>
+            <div class="form-group">
+                <input class="form-control" type="file" name="profile_img" accept="image/*">
+            </div>
 
-        <br>
-        <h4>Upload a profile picture (optional)</h4>
-        <div class="form-group">
-            <input class="form-control" type="file" name="profile_img" accept="image/*">
-        </div>
+            <input class="btn btn-primary" type="submit" value="Register">
+        </form>
 
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    </div>
+    
 
 {% endblock %}
