--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -2,16 +2,28 @@ textarea {
     width: 100%;
 }
 
+
 .container {
+    padding: 0;
     margin: 0 auto;
-    max-width: 873px;
+    max-width: 95%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 275px 598px;
+    grid-template-columns: 25% 75%;
+}
+
+.navbar {
+    margin-right: auto!important;
+    margin-bottom: auto!important;
+    padding: 0;
+}
+
+.navbar-brand {
+    margin-right: 0!important;
 }
 
 .body {
-    max-width: 598px;
+    max-width: 100%;
     border-left: 1px solid lightgray;
     border-right: 1px solid lightgray; 
 }
@@ -63,9 +75,6 @@ textarea {
 #submit {
     display: block;
     margin: 0 0 0 auto; 
-    /* width: 20rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem; */
 }
 
 .span-2-col {
@@ -252,7 +261,7 @@ svg {
     gap: 3px;
     padding-top: 1rem;
     border-top: 1px solid lightgray;
-    /* align-items: center;     */
+
 }
 
 .edit-option {
@@ -289,4 +298,11 @@ svg {
     text-align: center;
     padding: 1rem 0.5rem 1rem 0.5rem;
     border-top: 1px solid lightgray;
+}
+
+@media (min-width: 873px) {
+    .container {
+        max-width: 873px;
+        grid-template-columns: 200px 673px;
+    }
 }
