--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -11,10 +11,10 @@
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+                <input autofocus class="form-control" type="text" name="username" placeholder="Username" value="test_account">
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="Password">
+                <input class="form-control" type="password" name="password" placeholder="Password" value="test_account">
             </div>
             <input class="btn btn-primary" type="submit" value="Login">
         </form>
